# extendr_multiple_crates-mre

./: .gitignore  Cargo.toml  README.md
my-extendr-lib/: Cargo.toml
myextendr/: .Rbuildignore  .Rhistory  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  README.Rmd
myextendr/R/: extendr-wrappers.R
myextendr/man/: hello.Rd
myextendr/src/: Makevars  Makevars.win  entrypoint.c  myextendr-win.def
myextendr/src/rust/: Cargo.toml
myextendr/src/rust/src/: lib.rs
myextendr/tests/: testthat.R
