[package]
name = 'myextendr'
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'myextendr'

[dependencies]
extendr-api = '*'

# Using relative path fails in `devtools::install`:
my-extendr-lib = { path = "../../../my-extendr-lib" }

# Using absolute path works:
# my-extendr-lib = { path = "/absolute/path/to/extendr/test_workspace/my-extendr-lib" }
